# advent

./: .gitattributes  .gitignore  pyproject.toml  requirements.txt
advent/2021/python/: README.md  day_1.py  day_3.py  day_4.py  pyproject.toml  utils.py
advent/2021/python/day8/: python.py
advent/2022/: .day_1.py.swp  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_template.py  makeday.sh
advent/2022/tests/: test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py
advent/2023/: Makefile  cleanday.sh  day_1.cpp  day_1_executable  day_template.py
advent/2023/tests/: template.py
advent/archive/2022_orig/: day_1.ipynb  day_2.ipynb  day_3.ipynb
advent/archive/2022_orig/.ipynb_checkpoints/: day_1-checkpoint.ipynb  day_1-checkpoint.py  day_2-checkpoint.ipynb
advent/clayton/: README.md
advent/clayton/2021/python/: day_2.py
advent/clayton/2021/python/day5/: named_tuples.py
advent/clayton/2021/python/day6/: cohorts.py
advent/clayton/2021/python/day7/: python.py
advent/clayton/2021/python/template/: python.py
