[tool.poetry]
name = "advent"
version = "0.1.0"
description = "Code for 'Advent of Code'"
authors = ["Jay Johnson <johnson.jayrichard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "*"
ipdb = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "advent/2022/", "advent/2023/"
] 
